--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <input type="radio" name="color" value="blue" checked>Blue
             <input type="radio" name="color" value="yellow">Yellow
         </form>
+        <button name="delete-selected">Delete Selected</button>
 
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="circles.js" type="text/javascript"></script>
